--- a/index.html
+++ b/index.html
@@ -1,7 +1,26 @@
 <!DOCTYPE html>
-<html>
-    <body>
-        <h1>Hello World</h1>
-        <p>I'm hosted with GitHub Pages.</p>
-    </body>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to GitHub Pages</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        /* Custom font */
+        body {
+            font-family: 'Arial', sans-serif;
+        }
+    </style>
+</head>
+
+<body class="bg-gray-100 text-gray-800 flex items-center justify-center h-screen">
+
+    <div class="text-center p-8 rounded-lg shadow-lg bg-white max-w-md w-full">
+        <h1 class="text-4xl font-semibold text-indigo-600 mb-4">Hello, World!</h1>
+        <p class="text-lg text-gray-600">I'm hosted with GitHub Pages.</p>
+    </div>
+
+</body>
+
 </html>
