--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <body class="bg-gray-100 text-gray-800 flex items-center justify-center h-screen">
 
     <div class="text-center p-8 rounded-lg shadow-lg bg-white max-w-md w-full">
-        <h1 class="text-4xl font-semibold text-indigo-600 mb-4">Hello, World!</h1>
-        <p class="text-lg text-gray-600">I'm hosted with GitHub Pages.</p>
+        <h1 class="text-4xl font-semibold text-indigo-600 mb-4">Welcome!</h1>
+        <p class="text-lg text-gray-600">Under Construction...</p>
     </div>
 
 </body>
